js/src/tests/test262/built-ins/Error/S15.11.1.1_A3_T1.js
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
err1
=
Error
(
)
;
if
(
err1
.
toString
(
)
!
=
=
'
[
object
'
+
'
Error
'
+
'
]
'
)
{
ERROR
(
'
#
1
:
Error
.
prototype
.
toString
=
Object
.
prototype
.
toString
;
var
err1
=
Error
(
)
;
err1
.
toString
(
)
=
=
=
\
'
[
object
Error
]
\
'
.
Actual
:
'
+
err1
.
toString
(
)
)
;
}
reportCompare
(
0
0
)
;
